correct errors in shop.html and navigation bars

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,15 @@ h3 {
 	line-height: 15.4px;
 }
 
+h4 {
+	font-size: 24px;
+  color: #00ffff;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.4px;
+}
+
 a {
   color: black;
 }
